# triaxproject

./: .gitignore  LICENSE  README.md  pyproject.toml
example_outputs/: contour_measurements.csv  example_summary.txt
examples/: worked_examples.py
src/triaxproject/: __init__.py  diagnostics.py  geometry.py  profiles.py  projection.py
tests/: __init__.py  test_projection.py  test_readme.py
