[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triaxproject"
version = "0.1.0"
description = "Numerical projection and contour diagnostics for homeoidally stratified triaxial ellipsoids"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.7",
  "contourpy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
